# lite-mark-core

./: .gitignore  .trae  AGENTS.md  CHANGELOG_v0.2.0.md  CLAUDE.md  CLI_BATCH_IMPLEMENTATION.md  Cargo.toml  MIGRATION_GUIDE.md  Makefile  README.md  TODO.md  plan.md  skill-optimize-refs.md  skills.md
.github/workflows/: deploy-frontend.yml  kimi-review.yml  release.yml  test-suite.yml  test.yml
.kimi/: doc_scan_result.json
.kimi/agents/: reviewer-system.md  reviewer.yaml
.kimi/skills/dev-pipeline/: SKILL.md
.kimi/skills/doc-maintainer/: SKILL.md
.kimi/skills/doc-maintainer/references/: workflow.md
.kimi/skills/doc-maintainer/scripts/: scan_docs.py
.kimi/skills/litemark-dev/: SKILL.md
.kimi/skills/litemark-release/: SKILL.md
.kimi/skills/req-bug-analyzer/: SKILL.md
.kimi/skills/req-bug-analyzer/references/: bug-analysis-template.md  requirement-analysis-template.md
.kimi/skills/rust-test-runner/: SKILL.md
.kimi/skills/rust-test-runner/scripts/: parse_test_output.py
.qoder/quests/: check-plan-progress-1762412721.md  check-plan-progress.md  core-module-division.md  frame-proportional-scaling-optimization.md  github-actions-trigger.md  multi-platform-batch-design.md
.qoder/repowiki/zh/content/: 安装指南.md  快速入门.md  项目概述.md
.qoder/repowiki/zh/content/命令参考/: add 命令.md  batch 命令.md  show-template 命令.md  templates 命令.md  命令参考.md
.qoder/repowiki/zh/content/开发者指南/: 开发环境搭建.md  开发者指南.md  技术栈.md  构建与测试.md  贡献流程.md  路线图.md
.qoder/repowiki/zh/content/技术架构与设计/: EXIF数据提取模块.md  图像与文件I_O模块.md  技术架构与设计.md  模板布局解析模块.md  水印渲染引擎模块.md
.qoder/repowiki/zh/content/模板系统/: JSON模板结构说明.md  内置模板介绍.md  支持的变量列表.md  模板系统.md  自定义模板创建指南.md
.qoder/repowiki/zh/content/配置与自定义/: Logo集成.md  作者信息覆盖.md  自定义字体.md  配置与自定义.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
archive/: CHANGELOG_v0.2.0.md  PHASE1_COMPLETE.md  README.md
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  resolution_scaling_analysis.md
docs/changelog/: v0.3.0.md  v0.4.0-frontend-refactor.md
docs/doc_maintenance/: doc_scan_result.json  pending_fixes_2026-04-17.md
docs/wiki/: 01-image-formats.md  02-pixel-and-color.md  03-exif-metadata.md  04-font-rendering.md  05-image-compositing.md  06-resolution-scaling.md  07-heic-decoding.md  README.md
examples/: basic_usage.md  chinese_font_guide.md  exif_extraction.md  render_test.rs
litemark-cli/: Cargo.toml
litemark-cli/src/: batch.rs  commands.rs  main.rs  utils.rs
litemark-core/: ARCHITECTURE.md  Cargo.toml  README.md
litemark-core/src/: error.rs  exif.rs  image_io.rs  layout.rs  lib.rs  renderer.rs
litemark-core/src/renderer/: color.rs  draw.rs  logo.rs  mod.rs  text.rs
litemark-core/tests/: integration_test.rs
litemark-core/tests/fixtures/: customer_regressions.json
litemark-wasm/: Cargo.toml  USAGE.md  demo.html
litemark-wasm/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
litemark-wasm/frontend/src/: App.vue
litemark-wasm/frontend/src/assets/presets/: classic.json  compact.json  overlay.json
litemark-wasm/frontend/src/components/: FileList.vue  ImageCompare.vue  MessageToast.vue  ProcessingControls.vue  ProgressBar.vue  ResultCard.vue  ResultGallery.vue  UploadArea.vue
litemark-wasm/frontend/src/components/TemplateEditor/: JsonMode.vue  PresetMode.vue  TemplateEditor.vue  VisualMode.vue
litemark-wasm/frontend/src/composables/: useHeic.ts  useLocalStorage.ts  useWasm.ts
litemark-wasm/frontend/src/stores/: files.ts  processing.ts  settings.ts  template.ts
litemark-wasm/frontend/src/types/: index.ts  template.ts  wasm-module.d.ts  wasm.ts
litemark-wasm/frontend/src/utils/: fileValidation.ts  templatePresets.ts  zipDownload.ts
litemark-wasm/src/: lib.rs
scripts/: review.py  review.sh
scripts/tests/: test_review.py
src/: lib.rs  main.rs
src/exif_reader/: mod.rs
src/io/: mod.rs
src/layout/: mod.rs
src/renderer/: mod.rs
templates/: TEMPLATE_GUIDE.md  classic.json  compact.json  dark.json  elegant.json  minimal.json  modern.json  overlay.json  professional.json
test_images/demos/: IMG_9878.HEIC
tests/: Cargo.toml  README.md  TEST_BASELINE.md
tests/assets/: report_template.html  styles.css
tests/benches/: render_bench.rs
tests/fixtures/: regressions.jsonl
tests/src/e2e/: cli_tests.rs  mod.rs
tests/src/integration/: mod.rs  pipeline_tests.rs  regression_tests.rs  template_tests.rs  visual_regression_tests.rs
tests/src/unit/: exif_tests.rs  image_io_tests.rs  layout_tests.rs  mod.rs  renderer_tests.rs
