[workspace]
members = ["litemark-core", "litemark-cli"]
resolver = "2"

# 保留向后兼容性
# 原有的单体项目配置保留，但标记为已废弃
# 新版本请使用 litemark-core (核心库) 和 litemark-cli (CLI 客户端)
[package]
name = "litemark"
version = "0.1.0"
edition = "2021"
description = "A lightweight photo parameter watermark tool (legacy)"
license = "MIT"
repository = "https://github.com/26huitailang/lite-mark-core"
keywords = ["photo", "watermark", "exif", "photography"]
categories = ["multimedia::images"]

[[bin]]
name = "litemark"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5.51", features = ["derive"] }

# Image processing
image = "0.24.9"
libheif-rs = "1.0"

# Font rendering
rusttype = "0.9"

# EXIF parsing
kamadak-exif = "0.6.1"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# File I/O
walkdir = "2.4"

# Parallel processing
rayon = "1.8"

# Progress bar
indicatif = "0.18.3"

# System info
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
