[package]
name = "litemark-core"
version = "0.2.0"
edition = "2021"
description = "Core library for LiteMark - lightweight photo watermark processing"
license = "MIT"
repository = "https://github.com/26huitailang/lite-mark-core"
keywords = ["photo", "watermark", "exif", "photography", "image-processing"]
categories = ["multimedia::images"]

[lib]
name = "litemark_core"
path = "src/lib.rs"

[dependencies]
# Image processing
image = "0.24.9"
libheif-rs = "1.0"

# Font rendering
rusttype = "0.9"

# EXIF parsing
kamadak-exif = "0.6.1"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.8"
