[package]
name = "litemark-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for LiteMark Core to run in the browser"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Core library dependency (path within workspace)
litemark-core = { path = "../litemark-core" }
image = "0.24.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
